[project]
name = "localllm-text-input"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "clvnkhr", email = "calvin_khor@hotmail.com"},
]
dependencies = [
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "httpx>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
